@@ -43,6 +43,7 @@ using scsolver::numeric::Matrix;
 using ::std::vector;
 using ::std::cout;
 using ::std::endl;
+using ::std::distance;
 
 namespace scsolver {
 
