@@ -1,3 +1,9 @@
+2007-11-08  Fridrich Strba  <fridrich.strba@bluewin.ch>
+
+	* source/numeric/lpmodel.cxx, source/ui/lpbuilder.cxx,
+	  source/ui/dialog.cxx, source/ui/solvemodel.cxx: add
+	  using ::std::distance and using ::std::find (fixes build on SLED10).
+
 2007-11-07  Kohei Yoshida  <kyoshida@novell.com>
 
 	* workben/addon_pkg/translation/fr/scsolver.properties: added for French
